[gd_scene load_steps=3 format=3 uid="uid://c4dax2h8hj2o3"]

[ext_resource type="Script" path="res://character_create.gd" id="1_fy4d6"]

[sub_resource type="ImageTexture" id="ImageTexture_spwxl"]

[node name="CharacterCreate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fy4d6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.478431, 0.643137, 1, 1)

[node name="AttributeValues" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.956597
anchor_top = 0.140432
anchor_right = 1.04514
anchor_bottom = 0.479938
offset_left = -46.0
offset_right = 50.0
offset_bottom = 40.0
theme_override_constants/separation = 3
metadata/_edit_use_anchors_ = true

[node name="STRvalue" type="RichTextLabel" parent="ColorRect/AttributeValues"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "0
"

[node name="DEXvalue" type="RichTextLabel" parent="ColorRect/AttributeValues"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "0"

[node name="WISvalue" type="RichTextLabel" parent="ColorRect/AttributeValues"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "0"

[node name="ENDvalue" type="RichTextLabel" parent="ColorRect/AttributeValues"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "0"

[node name="CHRvalue" type="RichTextLabel" parent="ColorRect/AttributeValues"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "0"

[node name="LCKvalue" type="RichTextLabel" parent="ColorRect/AttributeValues"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "0"

[node name="Attributes" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 848.0
offset_top = 31.0
offset_right = 1086.0
offset_bottom = 148.0
theme_override_constants/separation = 15

[node name="ArttributesDefCC" type="Label" parent="ColorRect/Attributes"]
layout_mode = 2
text = "Please allocate your stat points."
autowrap_mode = 3

[node name="StrengthLabel" type="Label" parent="ColorRect/Attributes"]
layout_mode = 2
text = "Strength"

[node name="HBoxContainerSTR" type="HBoxContainer" parent="ColorRect/Attributes/StrengthLabel"]
layout_mode = 0
offset_left = 104.0
offset_top = -13.0
offset_right = 397.0
offset_bottom = 27.0
theme_override_constants/separation = 25

[node name="StrengthAddB" type="Button" parent="ColorRect/Attributes/StrengthLabel/HBoxContainerSTR"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AddSTRLabel" type="Label" parent="ColorRect/Attributes/StrengthLabel/HBoxContainerSTR/StrengthAddB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  +"

[node name="StrengthMinusB" type="Button" parent="ColorRect/Attributes/StrengthLabel/HBoxContainerSTR"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ReduceSTRLabel" type="Label" parent="ColorRect/Attributes/StrengthLabel/HBoxContainerSTR/StrengthMinusB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  -"

[node name="DexterityLabel" type="Label" parent="ColorRect/Attributes"]
layout_mode = 2
text = "Dexterity"

[node name="HBoxContainerDXT" type="HBoxContainer" parent="ColorRect/Attributes/DexterityLabel"]
layout_mode = 0
offset_left = 102.0
offset_top = -7.0
offset_right = 177.0
offset_bottom = 33.0
theme_override_constants/separation = 25

[node name="DexterityAddB" type="Button" parent="ColorRect/Attributes/DexterityLabel/HBoxContainerDXT"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AddDXTLabel" type="Label" parent="ColorRect/Attributes/DexterityLabel/HBoxContainerDXT/DexterityAddB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  +"

[node name="DexterityMinusB" type="Button" parent="ColorRect/Attributes/DexterityLabel/HBoxContainerDXT"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ReduceDXTLabel" type="Label" parent="ColorRect/Attributes/DexterityLabel/HBoxContainerDXT/DexterityMinusB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  -"

[node name="WisdomLabel" type="Label" parent="ColorRect/Attributes"]
layout_mode = 2
text = "Wisdom"

[node name="HBoxContainerWIS" type="HBoxContainer" parent="ColorRect/Attributes/WisdomLabel"]
layout_mode = 0
offset_left = 102.0
offset_top = -10.0
offset_right = 156.0
offset_bottom = 30.0
theme_override_constants/separation = 25

[node name="WisdomAddB" type="Button" parent="ColorRect/Attributes/WisdomLabel/HBoxContainerWIS"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AddWISLabel" type="Label" parent="ColorRect/Attributes/WisdomLabel/HBoxContainerWIS/WisdomAddB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  +"

[node name="WisdomMinusB" type="Button" parent="ColorRect/Attributes/WisdomLabel/HBoxContainerWIS"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ReduceWISabel" type="Label" parent="ColorRect/Attributes/WisdomLabel/HBoxContainerWIS/WisdomMinusB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  -"
metadata/_edit_use_anchors_ = true

[node name="EnduranceLabel" type="Label" parent="ColorRect/Attributes"]
layout_mode = 2
text = "Endurance"

[node name="HBoxContainerEND" type="HBoxContainer" parent="ColorRect/Attributes/EnduranceLabel"]
layout_mode = 0
offset_left = 101.0
offset_top = -6.0
offset_right = 176.0
offset_bottom = 34.0
theme_override_constants/separation = 25

[node name="EnduranceAddB" type="Button" parent="ColorRect/Attributes/EnduranceLabel/HBoxContainerEND"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AddENDLabel" type="Label" parent="ColorRect/Attributes/EnduranceLabel/HBoxContainerEND/EnduranceAddB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  +"

[node name="EnduranceMinusB" type="Button" parent="ColorRect/Attributes/EnduranceLabel/HBoxContainerEND"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ReduceENDLabel" type="Label" parent="ColorRect/Attributes/EnduranceLabel/HBoxContainerEND/EnduranceMinusB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  -"

[node name="CharismaLabel" type="Label" parent="ColorRect/Attributes"]
layout_mode = 2
text = "Charisma"

[node name="HBoxContainerCHR" type="HBoxContainer" parent="ColorRect/Attributes/CharismaLabel"]
layout_mode = 0
offset_left = 102.0
offset_top = -7.0
offset_right = 178.0
offset_bottom = 33.0
theme_override_constants/separation = 25

[node name="CharismaAddB" type="Button" parent="ColorRect/Attributes/CharismaLabel/HBoxContainerCHR"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AddCHRLabel" type="Label" parent="ColorRect/Attributes/CharismaLabel/HBoxContainerCHR/CharismaAddB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  +"

[node name="CharismaMinusB" type="Button" parent="ColorRect/Attributes/CharismaLabel/HBoxContainerCHR"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ReduceCHRLabel" type="Label" parent="ColorRect/Attributes/CharismaLabel/HBoxContainerCHR/CharismaMinusB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  -"

[node name="LuckLabel" type="Label" parent="ColorRect/Attributes"]
layout_mode = 2
text = "Luck"

[node name="HBoxContainerLCK" type="HBoxContainer" parent="ColorRect/Attributes/LuckLabel"]
layout_mode = 0
offset_left = 103.0
offset_top = -7.0
offset_right = 178.0
offset_bottom = 33.0
theme_override_constants/separation = 25

[node name="LuckAddB" type="Button" parent="ColorRect/Attributes/LuckLabel/HBoxContainerLCK"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AddLCKLabel" type="Label" parent="ColorRect/Attributes/LuckLabel/HBoxContainerLCK/LuckAddB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  +"

[node name="LuckMinusB" type="Button" parent="ColorRect/Attributes/LuckLabel/HBoxContainerLCK"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ReduceLCKLabel" type="Label" parent="ColorRect/Attributes/LuckLabel/HBoxContainerLCK/LuckMinusB"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  -"

[node name="Class" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 590.0
offset_top = 28.0
offset_right = 798.0
offset_bottom = 354.0
theme_override_constants/separation = 25

[node name="ClassDefCC" type="Label" parent="ColorRect/Class"]
layout_mode = 2
text = "Please choose a Profession"

[node name="WarriorB" type="Button" parent="ColorRect/Class"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="WarriorLabel" type="Label" parent="ColorRect/Class/WarriorB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -13.0
offset_right = 30.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Warrior"

[node name="MageB" type="Button" parent="ColorRect/Class"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MageLabel" type="Label" parent="ColorRect/Class/MageB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -13.0
offset_right = 21.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Mage"

[node name="RogueB" type="Button" parent="ColorRect/Class"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RogueLabel" type="Label" parent="ColorRect/Class/RogueB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -13.0
offset_right = 24.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Rogue"

[node name="PriestB" type="Button" parent="ColorRect/Class"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PriestLabel" type="Label" parent="ColorRect/Class/PriestB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -13.0
offset_right = 22.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Priest"

[node name="Race" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 374.0
offset_top = 27.0
offset_right = 566.0
offset_bottom = 353.0
theme_override_constants/separation = 25

[node name="RaceDefCC" type="Label" parent="ColorRect/Race"]
layout_mode = 2
text = "Please Choose your Race"

[node name="HumanB" type="Button" parent="ColorRect/Race"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HumanLabel" type="Label" parent="ColorRect/Race/HumanB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Human"

[node name="ElfB" type="Button" parent="ColorRect/Race"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ElfLabel" type="Label" parent="ColorRect/Race/ElfB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "  Elf"

[node name="DwarfB" type="Button" parent="ColorRect/Race"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DwarfLabel" type="Label" parent="ColorRect/Race/DwarfB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -13.0
offset_right = 23.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Dwarf"

[node name="BeastmanB" type="Button" parent="ColorRect/Race"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BeastmanLabel" type="Label" parent="ColorRect/Race/BeastmanB"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Beastman
"

[node name="StartGameButton" type="Button" parent="ColorRect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 972.0
offset_top = 581.0
offset_right = 1122.0
offset_bottom = 631.0

[node name="StartGameLabel" type="Label" parent="ColorRect/StartGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -13.0
offset_right = 44.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "START GAME"

[node name="BackCCButton" type="Button" parent="ColorRect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.0
offset_top = 253.0
offset_right = -221.0
offset_bottom = 303.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackCCLabel" type="Label" parent="ColorRect/BackCCButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -13.0
offset_right = 21.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK"

[node name="Sex" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 362.0
offset_top = 98.0
offset_right = 402.0
offset_bottom = 152.0

[node name="MaleButton" type="Button" parent="ColorRect/Sex"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="SMBLabel" type="Label" parent="ColorRect/Sex/MaleButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "   M "

[node name="FemaleButton" type="Button" parent="ColorRect/Sex"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_vertical = 4

[node name="SFBLabel" type="Label" parent="ColorRect/Sex/FemaleButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "    F "

[node name="SexLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 364.0
offset_top = 67.0
offset_right = 404.0
offset_bottom = 93.0
text = "Sex"

[node name="ClassDescTitleLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 734.0
offset_top = 371.0
offset_right = 875.0
offset_bottom = 397.0
text = "Class Description: "

[node name="ClassDescriptionLabel" type="Label" parent="ColorRect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 738.0
offset_top = 397.0
offset_right = 1133.0
offset_bottom = 483.0
text = "Empty"
autowrap_mode = 3

[node name="RaceDescTitleLabel" type="Label" parent="ColorRect"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 0
offset_left = 424.0
offset_top = 366.0
offset_right = 563.0
offset_bottom = 392.0
text = "Race Description: "

[node name="RaceDescriptionLabel" type="Label" parent="ColorRect"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 424.0
offset_top = 389.0
offset_right = 703.0
offset_bottom = 468.0
text = "Empty"
autowrap_mode = 3

[node name="NameLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 54.0
offset_top = 372.0
offset_right = 109.0
offset_bottom = 398.0
text = "Name: "

[node name="SexLabel2" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 55.0
offset_top = 416.0
offset_right = 95.0
offset_bottom = 442.0
text = "Sex: "

[node name="RaceLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 54.0
offset_top = 458.0
offset_right = 100.0
offset_bottom = 484.0
text = "Race: "

[node name="ClassLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 53.0
offset_top = 503.0
offset_right = 102.0
offset_bottom = 529.0
text = "Class: "

[node name="HealthLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 53.0
offset_top = 545.0
offset_right = 113.0
offset_bottom = 571.0
text = "Health: "

[node name="ManaLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 57.0
offset_top = 592.0
offset_right = 110.0
offset_bottom = 618.0
text = "Mana: "

[node name="AbilitiesLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 17.0
offset_top = 195.0
offset_right = 65.0
offset_bottom = 221.0
text = "Skills: "

[node name="NameContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 40.0
offset_top = 71.0
offset_right = 339.0
offset_bottom = 114.0

[node name="NameCaret" type="Label" parent="ColorRect/NameContainer"]
layout_mode = 2
text = "Name: "

[node name="NameInput" type="LineEdit" parent="ColorRect/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Skills" type="Label" parent="ColorRect"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
offset_left = 22.0001
offset_top = 245.0
offset_right = 522.0
offset_bottom = 285.0
rotation = 0.00590338
size_flags_horizontal = 0
size_flags_vertical = 0
text = "None"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = 48.0
offset_right = 52.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentName" type="Label" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Unknown"

[node name="CurrentSex" type="Label" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Unknown"

[node name="CurrentRace" type="RichTextLabel" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Unknown"

[node name="CurrenClass" type="RichTextLabel" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Classless
"

[node name="Totalhealth" type="Label" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 0
text = "0"

[node name="TotalMana" type="Label" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "0"

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 0
offset_left = -39.0
offset_top = 124.0
offset_right = 150.0
offset_bottom = 329.0
rotation = 2.35011

[node name="CharImage" type="TextureRect" parent="ColorRect/Panel"]
layout_mode = 0
offset_left = 38.0
offset_top = 131.0
offset_right = 347.0
offset_bottom = 349.0
rotation = 1.81415
texture = SubResource("ImageTexture_spwxl")
stretch_mode = 1

[connection signal="pressed" from="ColorRect/Attributes/StrengthLabel/HBoxContainerSTR/StrengthAddB" to="." method="_on_strength_add_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/StrengthLabel/HBoxContainerSTR/StrengthMinusB" to="." method="_on_strength_minus_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/DexterityLabel/HBoxContainerDXT/DexterityAddB" to="." method="_on_dexterity_add_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/DexterityLabel/HBoxContainerDXT/DexterityMinusB" to="." method="_on_dexterity_minus_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/WisdomLabel/HBoxContainerWIS/WisdomAddB" to="." method="_on_wisdom_add_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/WisdomLabel/HBoxContainerWIS/WisdomMinusB" to="." method="_on_wisdom_minus_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/EnduranceLabel/HBoxContainerEND/EnduranceAddB" to="." method="_on_endurance_add_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/EnduranceLabel/HBoxContainerEND/EnduranceMinusB" to="." method="_on_endurance_minus_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/CharismaLabel/HBoxContainerCHR/CharismaAddB" to="." method="_on_charisma_add_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/CharismaLabel/HBoxContainerCHR/CharismaMinusB" to="." method="_on_charisma_minus_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/LuckLabel/HBoxContainerLCK/LuckAddB" to="." method="_on_luck_add_b_pressed"]
[connection signal="pressed" from="ColorRect/Attributes/LuckLabel/HBoxContainerLCK/LuckMinusB" to="." method="_on_luck_minus_b_pressed"]
[connection signal="pressed" from="ColorRect/Class/WarriorB" to="." method="_on_warrior_b_pressed"]
[connection signal="pressed" from="ColorRect/Class/MageB" to="." method="_on_mage_b_pressed"]
[connection signal="pressed" from="ColorRect/Class/RogueB" to="." method="_on_rogue_b_pressed"]
[connection signal="pressed" from="ColorRect/Class/PriestB" to="." method="_on_priest_b_pressed"]
[connection signal="pressed" from="ColorRect/Race/HumanB" to="." method="_on_human_b_pressed"]
[connection signal="pressed" from="ColorRect/Race/ElfB" to="." method="_on_elf_b_pressed"]
[connection signal="pressed" from="ColorRect/Race/DwarfB" to="." method="_on_dwarf_b_pressed"]
[connection signal="pressed" from="ColorRect/Race/BeastmanB" to="." method="_on_beastman_b_pressed"]
[connection signal="pressed" from="ColorRect/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="ColorRect/BackCCButton" to="." method="_on_back_cc_button_pressed"]
[connection signal="pressed" from="ColorRect/Sex/MaleButton" to="." method="_on_male_button_pressed"]
[connection signal="pressed" from="ColorRect/Sex/FemaleButton" to="." method="_on_female_button_pressed"]
[connection signal="text_submitted" from="ColorRect/NameContainer/NameInput" to="." method="_on_name_input_text_submitted"]
